--- a/test/index.html
+++ b/test/index.html
@@ -1,32 +1,33 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste CORS</title>
+    <title>ECommerce | Teste CORS</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <button onclick="getAllProducts()">Visualizar Produtos</button>
-    <br>
-    <br>
-    <div id="products"></div>
-    <script>
-        function getAllProducts() {
-            const requestOptions = {
-                method: "GET",
-                redirect: "follow"
-            };
+    <div class="container">
+        <h1>E-Commerce</h1>
 
-            fetch("http://localhost:5500/api/product", requestOptions)
-                .then((response) => response.json())
-                .then((result) => {
-                    document.getElementById("products").innerText = JSON.stringify(result, null, 2);
-                })
-                .catch((error) => document.getElementById("products").innerText = "Erro na requisição");
-        }
+        <div class="filter-section">
+            <label for="productName">Nome do Produto:</label>
+            <input type="text" id="productName" placeholder="Enter product name">
+            <button onclick="filterProductsByName()">Filtrar Produtos</button>
+        </div>
 
-    </script>
+        <div class="buttons-section">
+            <button onclick="getAllProducts()">Produtos</button>
+            <button onclick="getAllSales()">Vendas</button>
+            <button onclick="getAllRefunds()">Devoluções</button>
+            <button onclick="getAllExchanges()">Trocas</button>
+        </div>
+
+        <div id="result" class="result-section"></div>
+    </div>
 </body>
 
 </html>
