--- a/test/index.html
+++ b/test/index.html
@@ -13,20 +13,83 @@
     <div class="container">
         <h1>E-Commerce</h1>
 
+        <!-- Filter Section -->
         <div class="filter-section">
-            <label for="productName">Nome do Produto:</label>
-            <input type="text" id="productName" placeholder="Enter product name">
+            <label for="productNameToFilter">Nome do Produto:</label>
+            <input type="text" id="productNameToFilter" placeholder="Enter product name">
             <button onclick="filterProductsByName()">Filtrar Produtos</button>
         </div>
-
+        
+        <!-- Buttons Section -->
         <div class="buttons-section">
             <button onclick="getAllProducts()">Produtos</button>
             <button onclick="getAllSales()">Vendas</button>
             <button onclick="getAllRefunds()">Devoluções</button>
             <button onclick="getAllExchanges()">Trocas</button>
         </div>
+        
+        <br><div id="result" class="result-section"></div>
 
-        <div id="result" class="result-section"></div>
+        <!-- Create Product Section -->
+        <div class="section">
+            <h2>Criar Produto</h2>
+
+            <form id="productForm">
+                <label for="productName">Nome do Produto:</label>
+                <input type="text" id="productName"><br><br>
+                <label for="productPrice">Preço do Produto:</label>
+                <input type="number" id="productPrice" step="0.01" required><br><br>
+                <label for="productQuantity">Quantidade do Produto:</label>
+                <input type="number" id="productQuantity" required><br><br>
+                <label for="productDescription">Descrição do Produto:</label>
+                <input type="text" id="productDescription" placeholder="Esse campo é opcional"><br><br>
+                <button type="button" onclick="submitProductForm()">Criar Produto</button>
+            </form>
+
+            <br><div id="productResult" class="result-section"></div>
+        </div>
+
+        <!-- Create Sale Section -->
+        <div class="section">
+            <h2>Criar Venda</h2>
+
+            <form id="saleForm">
+                <label for="saleProductId">ID do Produto:</label>
+                <input type="number" id="saleProductId" required>
+                <br><br><button type="button" onclick="submitSaleForm()">Criar Venda</button>
+            </form>
+
+            <br><div id="saleResult" class="result-section"></div>
+        </div>
+
+        <!-- Create Refund Section -->
+        <div class="section">
+            <h2>Criar Reembolso</h2>
+
+            <form id="refundForm">
+                <label for="refundSaleId">ID da Venda:</label>
+                <input type="number" id="refundSaleId" required>
+                <br><br><button type="button" onclick="submitRefundForm()">Criar Reembolso</button>
+            </form>
+
+            <br><div id="refundResult" class="result-section"></div>
+        </div>
+
+        <!-- Create Exchange Section -->
+        <div class="section">
+            <h2>Criar Troca</h2>
+
+            <form id="exchangeForm">
+                <label for="exchangeSaleId">ID da Venda:</label>
+                <input type="number" id="exchangeSaleId" required>
+                <br><br><label for="exchangeNewProductId">ID do Produto:</label>
+                <input type="number" id="exchangeNewProductId" placeholder="ID do Produto Novo" required>
+                <br><br><button type="button" onclick="submitExchangeForm()">Criar Devolução</button>
+            </form>
+
+            <br><div id="exchangeResult" class="result-section"></div>
+        </div>
+
     </div>
 </body>
 
