fix: visual studio code configuration in live server that was reloading after a post request.

--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,7 @@
         <!-- Filter Section -->
         <div class="filter-section">
             <label for="productNameToFilter">Nome do Produto:</label>
-            <input type="text" id="productNameToFilter" placeholder="Enter product name">
+            <input type="text" id="productNameToFilter" placeholder="Digite o nome do produto">
             <button onclick="filterProductsByName()">Filtrar Produtos</button>
         </div>
         
@@ -24,7 +24,7 @@
         <div class="buttons-section">
             <button onclick="getAllProducts()">Produtos</button>
             <button onclick="getAllSales()">Vendas</button>
-            <button onclick="getAllRefunds()">Devoluções</button>
+            <button onclick="getAllRefunds()">Reembolsos</button>
             <button onclick="getAllExchanges()">Trocas</button>
         </div>
         
