refactor: display all sale and exchange information.

--- a/test/index.html
+++ b/test/index.html
@@ -23,11 +23,11 @@
         <!-- Buttons Section -->
         <div class="buttons-section">
             <button onclick="getAllProducts()">Produtos</button>
-            <button onclick="getAllSales()">Vendas</button>
-            <button onclick="getAllProductSales()">Produtos por Venda</button>
+             <!--<button onclick="getAllSales()">Vendas</button>-->
+            <button onclick="getAllProductSales()">Vendas</button>
             <button onclick="getAllRefunds()">Reembolsos</button>
-            <button onclick="getAllExchanges()">Trocas</button>
-            <button onclick="getAllProductExchanges()">Novos Produtos por Troca</button>
+            <!--<button onclick="getAllExchanges()">Trocas</button>-->
+            <button onclick="getAllProductExchanges()">Trocas</button>
         </div>
         
         <br><div id="result" class="result-section"></div>
